--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime
 sites:
   - name: Website
     url: https://status.routechoices.com/
-  - name: Web API
+  - name: Web API Documentation
     url: https://api.routechoices.com/healthcheck/?format=json
   - name: WMS Tile Server
     url: https://wms.routechoices.com/?service=WMS&request=GetMap&layers=fhDbzlQSLho&styles=&format=image%2Fjpeg&transparent=false&version=1.1.1&width=512&height=512&srs=EPSG%3A3857&bbox=2641663.6975356913,8727274.141488286,2661231.576776697,8746842.020729292
